final (I hope!) fix for protorel redirects
* consolidate some project domains into redirects.dat from other conf
  and removed some redirect hops (where refreshDomainRedirects
  complained)
  * mediawiki.org
  * wikimedia.org
  * wikinews.org
  * wikiquote.org
  * wikiversity.org
  * wikivoyage.org
  * wikibooks.org
  * wiktionary.org
  * wikidata.org
  * www.wikisource.org

* cleaned up wikibooks/wikijunior in redirects.dat (and made protorel)
* force HTTPS for redirects on wikis that already force HTTPS
* rm backward compatibility redirects (e.g. UseMod) for newer wikis
  and private wikis
* redirect to lists.wikimedia.org instead of mail.wikipedia.org!!

RT: 1668
Bug: 31369
Change-Id: I27300f33a644f09379bc58613da4f702dfca684e

--- a/foundation.conf
+++ b/foundation.conf
@@ -5,15 +5,18 @@
     AllowEncodedSlashes On
 
     RewriteEngine On
+    RewriteRule . - [E=HTTP_X_Forwarded_Proto:%{HTTP:X-Forwarded-Proto}]
+    RewriteCond %{ENV:HTTP_X_Forwarded_Proto} !=https
+    RewriteRule . - [E=HTTP_X_Forwarded_Proto:http]
 
     # extract.php pages redirected to new pages
-    RewriteRule ^/fundraising(\.html)?$ /wiki/Fundraising [R=301,L]
-    RewriteRule ^/index(\.html)?$ /wiki/Home [R=301,L]
-    RewriteRule ^/GNU_FDL(\.html)?$ /wiki/GNU_Free_Documentation_License [R=301,L]
+    RewriteRule ^/fundraising(\.html)?$ %{ENV:HTTP_X_Forwarded_Proto}://%{HTTP_HOST}/wiki/Fundraising [R=301,L]
+    RewriteRule ^/index(\.html)?$ %{ENV:HTTP_X_Forwarded_Proto}://%{HTTP_HOST}/wiki/Home [R=301,L]
+    RewriteRule ^/GNU_FDL(\.html)?$ %{ENV:HTTP_X_Forwarded_Proto}://%{HTTP_HOST}/wiki/GNU_Free_Documentation_License [R=301,L]
 
     # Obsolete PDF redirected to current wiki page
     # Redirect added -- bv 2009-01-09
-    RewriteRule ^/bylaws\.pdf http://wikimediafoundation.org/wiki/Wikimedia_Foundation_bylaws [R,L]
+    RewriteRule ^/bylaws\.pdf %{ENV:HTTP_X_Forwarded_Proto}://%{HTTP_HOST}/wiki/Wikimedia_Foundation_bylaws [R,L]
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/foundation/w/index.php
@@ -21,10 +24,10 @@
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
-    RewriteRule ^/wiki\.cgi$ /w/index.php?title=%1 [R=301,L]
-    RewriteRule ^/wiki\.cgi$ /w/index.php [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{HTTP_HOST}/w/index.php?title=%1 [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{HTTP_HOST}/w/index.php [R=301,L]
 
-    RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
+    RewriteRule ^/math/(.*) %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/math/$1 [R=301]
 
     RewriteRule ^/wiki/Donate$ https://donate.wikimedia.org/ [R=301,L]
 
@@ -44,4 +47,3 @@
 </VirtualHost>
 
 # vim: syn=apache sts=4 sw=4 autoindent
-
