--- a/main.conf
+++ b/main.conf
@@ -13,14 +13,17 @@
     AllowEncodedSlashes On
 
     RewriteEngine On
+    RewriteRule . - [E=HTTP_X_Forwarded_Proto:%{HTTP:X-Forwarded-Proto}]
+    RewriteCond %{ENV:HTTP_X_Forwarded_Proto} !=https
+    RewriteRule . - [E=HTTP_X_Forwarded_Proto:http]
 
     # Make robots.txt editable via Mediawiki:robots.txt
     RewriteRule ^/robots.txt$ /w/robots.php [L]
 
-    RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/mediawiki/$1 [R=302]
+    RewriteRule ^/upload/(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/mediawiki/$1 [R=302]
 
     # Our FAQ
-    RewriteRule ^/FAQ$ http://www.mediawiki.org/wiki/Help:FAQ [R=301,L]
+    RewriteRule ^/FAQ$ %{ENV:HTTP_X_Forwarded_Proto}://www.mediawiki.org/wiki/Help:FAQ [R=301,L]
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/mediawiki/w/index.php
@@ -29,13 +32,13 @@
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
-    RewriteRule ^/wiki\.cgi$ /w/index.php?title=%1 [R=301,L]
-    RewriteRule ^/wiki\.cgi$ /w/index.php [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{HTTP_HOST}/w/index.php?title=%1 [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{HTTP_HOST}/w/index.php [R=301,L]
 
     # Early phase 2 compatibility URLs
-    RewriteRule ^/wiki\.phtml$ /w/index.php [R=301,L]
+    RewriteRule ^/wiki\.phtml$ %{ENV:HTTP_X_Forwarded_Proto}://%{HTTP_HOST}/w/index.php [R=301,L]
 
-    RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
+    RewriteRule ^/math/(.*) %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/math/$1 [R=301]
 
     # Configurable favicon
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
@@ -105,11 +108,6 @@
     RewriteRule ^/$ /w/index.php
     RewriteRule ^/w/$ /w/index.php
 
-    # bug 45005
-    # redirect wikidata.org to www.wikidata.org
-    RewriteCond %{HTTP_HOST} =wikidata.org
-    RewriteRule ^(.*)$ http://www.wikidata.org$1 [R=301,L,NE]
-
     # rewrite /entity/ URLs for wikidata per
     # https://meta.wikimedia.org/wiki/Wikidata/Notes/URI_scheme
     RewriteRule ^/entity/(.*)$ https://www.wikidata.org/wiki/Special:EntityData/$1 [R=303,QSA]
@@ -139,6 +137,9 @@
     AllowEncodedSlashes On
 
     RewriteEngine On
+    RewriteRule . - [E=HTTP_X_Forwarded_Proto:%{HTTP:X-Forwarded-Proto}]
+    RewriteCond %{ENV:HTTP_X_Forwarded_Proto} !=https
+    RewriteRule . - [E=HTTP_X_Forwarded_Proto:http]
 
     # Make robots.txt editable via Mediawiki:robots.txt
     RewriteRule ^/robots.txt$ /w/robots.php [L]
@@ -150,7 +151,7 @@
     # First grab the subdomain from HTTP_HOST
     RewriteCond %{HTTP_HOST} ([a-z]+)\.wiktionary\.org
     # Now use it
-    RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/wiktionary/$1 [R=302]
+    RewriteRule ^/upload/(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/wiktionary/$1 [R=302]
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/wiktionary.org/w/index.php
@@ -159,13 +160,13 @@
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
-    RewriteRule ^/wiki\.cgi$ /w/index.php?title=%1 [R=301,L]
-    RewriteRule ^/wiki\.cgi$ /w/index.php [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{HTTP_HOST}/w/index.php?title=%1 [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{HTTP_HOST}/w/index.php [R=301,L]
 
     # Early phase 2 compatibility URLs
-    RewriteRule ^/wiki\.phtml$ /w/index.php [R=301,L]
+    RewriteRule ^/wiki\.phtml$ %{ENV:HTTP_X_Forwarded_Proto}://%{HTTP_HOST}/w/index.php [R=301,L]
 
-    RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
+    RewriteRule ^/math/(.*) %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/math/$1 [R=301]
 
     # Configurable favicon
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
@@ -204,6 +205,9 @@
     AllowEncodedSlashes On
 
     RewriteEngine On
+    RewriteRule . - [E=HTTP_X_Forwarded_Proto:%{HTTP:X-Forwarded-Proto}]
+    RewriteCond %{ENV:HTTP_X_Forwarded_Proto} !=https
+    RewriteRule . - [E=HTTP_X_Forwarded_Proto:http]
 
     # Make robots.txt editable via Mediawiki:robots.txt
     RewriteRule ^/robots.txt$ /w/robots.php [L]
@@ -216,11 +220,11 @@
     RewriteCond %{HTTP_HOST} ([a-z\-]+)\.wikiquote\.org
     # Now use it
     #RewriteRule ^/upload/(.*)$ /upload/%1/$1
-    RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/wikiquote/%1/$1 [R=302]
+    RewriteRule ^/upload/(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/wikiquote/%1/$1 [R=302]
 
     # Send www.de.wikiquote.org -> de.wikiquote.org
     RewriteCond %{HTTP_HOST} ^www\.([a-z-]+)\.wikiquote\.org$
-    RewriteRule ^(.*)$ http://%1.wikiquote.org$1 [R=301,L]
+    RewriteRule ^(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://%1.wikiquote.org$1 [R=301,L]
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/wikiquote.org/w/index.php
@@ -229,13 +233,13 @@
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
-    RewriteRule ^/wiki\.cgi$ /w/index.php?title=%1 [R=301,L]
-    RewriteRule ^/wiki\.cgi$ /w/index.php [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{HTTP_HOST}/w/index.php?title=%1 [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{HTTP_HOST}/w/index.php [R=301,L]
 
     # Early phase 2 compatibility URLs
-    RewriteRule ^/wiki\.phtml$ /w/index.php [R=301,L]
+    RewriteRule ^/wiki\.phtml$ %{ENV:HTTP_X_Forwarded_Proto}://%{HTTP_HOST}/w/index.php [R=301,L]
 
-    RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
+    RewriteRule ^/math/(.*) %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/math/$1 [R=301]
 
     # Configurable favicon
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
@@ -273,7 +277,11 @@
     ServerAlias donate.wikipedia.org
     DocumentRoot "/usr/local/apache/common/docroot/donate"
     AllowEncodedSlashes On
+
     RewriteEngine On
+    RewriteRule . - [E=HTTP_X_Forwarded_Proto:%{HTTP:X-Forwarded-Proto}]
+    RewriteCond %{ENV:HTTP_X_Forwarded_Proto} !=https
+    RewriteRule . - [E=HTTP_X_Forwarded_Proto:http]
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/donate/w/index.php
@@ -286,8 +294,8 @@
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
-    RewriteRule ^/wiki\.cgi$ /w/index.php?title=%1 [R=301,L]
-    RewriteRule ^/wiki\.cgi$ /w/index.php [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{HTTP_HOST}/w/index.php?title=%1 [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{HTTP_HOST}/w/index.php [R=301,L]
 
     # Configurable favicon
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
@@ -342,6 +350,9 @@
     AllowEncodedSlashes On
 
     RewriteEngine On
+    RewriteRule . - [E=HTTP_X_Forwarded_Proto:%{HTTP:X-Forwarded-Proto}]
+    RewriteCond %{ENV:HTTP_X_Forwarded_Proto} !=https
+    RewriteRule . - [E=HTTP_X_Forwarded_Proto:http]
 
     # Make robots.txt editable via Mediawiki:robots.txt
     RewriteRule ^/robots.txt$ /w/robots.php [L]
@@ -353,7 +364,7 @@
     # First grab the subdomain from HTTP_HOST
     RewriteCond %{HTTP_HOST} ([a-z\-]+)\.wikipedia\.org
     # Now use it
-    RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/wikipedia/%1/$1 [R=302]
+    RewriteRule ^/upload/(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/wikipedia/%1/$1 [R=302]
 
     # Standard intrawiki rewrites
     # Primary wiki redirector:
@@ -363,25 +374,25 @@
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
-    RewriteRule ^/wiki\.cgi$ /w/index.php?title=%1 [R=301,L]
-    RewriteRule ^/wiki\.cgi$ /w/index.php [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{HTTP_HOST}/w/index.php?title=%1 [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{HTTP_HOST}/w/index.php [R=301,L]
 
     # Early phase 2 compatibility URLs
-    RewriteRule ^/wiki\.phtml$ /w/index.php [R=301,L]
+    RewriteRule ^/wiki\.phtml$ %{ENV:HTTP_X_Forwarded_Proto}://%{HTTP_HOST}/w/index.php [R=301,L]
 
     # and is for the others...
-    RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
+    RewriteRule ^/math/(.*) %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/math/$1 [R=301]
 
     # Send www.de.wikipedia.org -> de.wikipedia.org
     RewriteCond %{HTTP_HOST} ^www\.([a-z-]+)\.wikipedia\.org$
-    RewriteRule ^(.*)$ http://%1.wikipedia.org$1 [R=301,L]
+    RewriteRule ^(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://%1.wikipedia.org$1 [R=301,L]
 
     # static -> $lang/static
     RewriteCond %{HTTP_HOST} ([a-z\-]+)\.wikipedia\.org
     RewriteRule ^/static/(.*)$ /static/%1/$1
 
     # moved wikistats off NFS
-    RewriteRule ^/wikistats(/(.*$)|$) http://stats.wikimedia.org/$2 [R=302,L]
+    RewriteRule ^/wikistats(/(.*$)|$) %{ENV:HTTP_X_Forwarded_Proto}://stats.wikimedia.org/$2 [R=302,L]
 
     # Configurable favicon
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
@@ -422,6 +433,9 @@
     AllowEncodedSlashes On
 
     RewriteEngine On
+    RewriteRule . - [E=HTTP_X_Forwarded_Proto:%{HTTP:X-Forwarded-Proto}]
+    RewriteCond %{ENV:HTTP_X_Forwarded_Proto} !=https
+    RewriteRule . - [E=HTTP_X_Forwarded_Proto:http]
 
     # Make robots.txt editable via Mediawiki:robots.txt
     RewriteRule ^/robots.txt$ /w/robots.php [L]
@@ -431,13 +445,13 @@
 
     # Send www.de.wikibooks.org -> de.wikibooks.org
     RewriteCond %{HTTP_HOST} ^www\.([a-z-]+)\.wikibooks\.org$
-    RewriteRule ^(.*)$ http://%1.wikibooks.org$1 [R=301,L]
+    RewriteRule ^(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://%1.wikibooks.org$1 [R=301,L]
 
     # Uploads to the host-specific directory
     # First grab the subdomain from HTTP_HOST
     RewriteCond %{HTTP_HOST} ([a-z\-]+)\.wikibooks\.org
     # Now use it
-    RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/wikibooks/%1/$1 [R=302]
+    RewriteRule ^/upload/(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/wikibooks/%1/$1 [R=302]
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/wikibooks.org/w/index.php
@@ -446,13 +460,13 @@
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
-    RewriteRule ^/wiki\.cgi$ /w/index.php?title=%1 [R=301,L]
-    RewriteRule ^/wiki\.cgi$ /w/index.php [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{HTTP_HOST}/w/index.php?title=%1 [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{HTTP_HOST}/w/index.php [R=301,L]
 
     # Early phase 2 compatibility URLs
-    RewriteRule ^/wiki\.phtml$ /w/index.php [R=301,L]
+    RewriteRule ^/wiki\.phtml$ %{ENV:HTTP_X_Forwarded_Proto}://%{HTTP_HOST}/w/index.php [R=301,L]
 
-    RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
+    RewriteRule ^/math/(.*) %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/math/$1 [R=301]
 
     # Configurable favicon
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
@@ -491,10 +505,9 @@
     AllowEncodedSlashes On
 
     RewriteEngine On
-
-    # www -> wikisource.org - Not a portal!
-    RewriteCond %{HTTP_HOST} (www)\.wikisource\.org
-    RewriteRule ^(.*)$ http://wikisource.org$1 [R=301,L]
+    RewriteRule . - [E=HTTP_X_Forwarded_Proto:%{HTTP:X-Forwarded-Proto}]
+    RewriteCond %{ENV:HTTP_X_Forwarded_Proto} !=https
+    RewriteRule . - [E=HTTP_X_Forwarded_Proto:http]
 
     # Make robots.txt editable via Mediawiki:robots.txt
     RewriteRule ^/robots.txt$ /w/robots.php [L]
@@ -504,13 +517,13 @@
 
     # Send www.de.wikisource.org -> de.wikisource.org
     RewriteCond %{HTTP_HOST} ^www\.([a-z-]+)\.wikisource\.org$
-    RewriteRule ^(.*)$ http://%1.wikisource.org$1 [R=301,L]
+    RewriteRule ^(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://%1.wikisource.org$1 [R=301,L]
 
     # Uploads to the host-specific directory
     # First grab the subdomain from HTTP_HOST
     RewriteCond %{HTTP_HOST} ([a-z\-]+)\.wikisource\.org
     # Now use it
-    RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/wikisource/%1/$1 [R=302]
+    RewriteRule ^/upload/(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/wikisource/%1/$1 [R=302]
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/wikisource.org/w/index.php
@@ -519,13 +532,13 @@
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
-    RewriteRule ^/wiki\.cgi$ /w/index.php?title=%1 [R=301,L]
-    RewriteRule ^/wiki\.cgi$ /w/index.php [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{HTTP_HOST}/w/index.php?title=%1 [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{HTTP_HOST}/w/index.php [R=301,L]
 
     # Early phase 2 compatibility URLs
-    RewriteRule ^/wiki\.phtml$ /w/index.php [R=301,L]
+    RewriteRule ^/wiki\.phtml$ %{ENV:HTTP_X_Forwarded_Proto}://%{HTTP_HOST}/w/index.php [R=301,L]
 
-    RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
+    RewriteRule ^/math/(.*) %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/math/$1 [R=301]
 
     # Configurable favicon
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
@@ -564,6 +577,9 @@
     AllowEncodedSlashes On
 
     RewriteEngine On
+    RewriteRule . - [E=HTTP_X_Forwarded_Proto:%{HTTP:X-Forwarded-Proto}]
+    RewriteCond %{ENV:HTTP_X_Forwarded_Proto} !=https
+    RewriteRule . - [E=HTTP_X_Forwarded_Proto:http]
 
     # Make robots.txt editable via Mediawiki:robots.txt
     RewriteRule ^/robots.txt$ /w/robots.php [L]
@@ -573,13 +589,13 @@
 
     # Send www.de.wikinews.org -> de.wikinews.org
     RewriteCond %{HTTP_HOST} ^www\.([a-z-]+)\.wikinews\.org$
-    RewriteRule ^(.*)$ http://%1.wikinews.org$1 [R=301,L]
+    RewriteRule ^(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://%1.wikinews.org$1 [R=301,L]
 
     # Uploads to the host-specific directory
     # First grab the subdomain from HTTP_HOST
     RewriteCond %{HTTP_HOST} ([a-z\-]+)\.wikinews\.org
     # Now use it
-    RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/wikinews/%1/$1 [R=302]
+    RewriteRule ^/upload/(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/wikinews/%1/$1 [R=302]
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/wikinews.org/w/index.php
@@ -588,13 +604,13 @@
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
-    RewriteRule ^/wiki\.cgi$ /w/index.php?title=%1 [R=301,L]
-    RewriteRule ^/wiki\.cgi$ /w/index.php [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{HTTP_HOST}/w/index.php?title=%1 [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{HTTP_HOST}/w/index.php [R=301,L]
 
     # Early phase 2 compatibility URLs
-    RewriteRule ^/wiki\.phtml$ /w/index.php [R=301,L]
+    RewriteRule ^/wiki\.phtml$ %{ENV:HTTP_X_Forwarded_Proto}://%{HTTP_HOST}/w/index.php [R=301,L]
 
-    RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
+    RewriteRule ^/math/(.*) %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/math/$1 [R=301]
 
     # Configurable favicon
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
@@ -634,6 +650,9 @@
     AllowEncodedSlashes On
 
     RewriteEngine On
+    RewriteRule . - [E=HTTP_X_Forwarded_Proto:%{HTTP:X-Forwarded-Proto}]
+    RewriteCond %{ENV:HTTP_X_Forwarded_Proto} !=https
+    RewriteRule . - [E=HTTP_X_Forwarded_Proto:http]
 
     # Make robots.txt editable via Mediawiki:robots.txt
     RewriteRule ^/robots.txt$ /w/robots.php [L]
@@ -643,13 +662,13 @@
 
     # Send www.de.wikiversity.org -> de.wikiversity.org
     RewriteCond %{HTTP_HOST} ^www\.([a-z-]+)\.wikiversity\.org$
-    RewriteRule ^(.*)$ http://%1.wikiversity.org$1 [R=301,L]
+    RewriteRule ^(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://%1.wikiversity.org$1 [R=301,L]
 
     # Uploads to the host-specific directory
     # First grab the subdomain from HTTP_HOST
     RewriteCond %{HTTP_HOST} ([a-z\-]+)\.wikiversity\.org
     # Now use it
-    RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/wikiversity/%1/$1 [R=302]
+    RewriteRule ^/upload/(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/wikiversity/%1/$1 [R=302]
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/wikiversity.org/w/index.php
@@ -658,13 +677,13 @@
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
-    RewriteRule ^/wiki\.cgi$ /w/index.php?title=%1 [R=301,L]
-    RewriteRule ^/wiki\.cgi$ /w/index.php [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{HTTP_HOST}/w/index.php?title=%1 [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{HTTP_HOST}/w/index.php [R=301,L]
 
     # Early phase 2 compatibility URLs
-    RewriteRule ^/wiki\.phtml$ /w/index.php [R=301,L]
+    RewriteRule ^/wiki\.phtml$ %{ENV:HTTP_X_Forwarded_Proto}://%{HTTP_HOST}/w/index.php [R=301,L]
 
-    RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
+    RewriteRule ^/math/(.*) %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/math/$1 [R=301]
 
     # Configurable favicon
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
