--- a/wwwportals.conf
+++ b/wwwportals.conf
@@ -1,10 +1,14 @@
 <VirtualHost *>
     ServerName wikipedia.org
-    Redirect permanent / http://www.wikipedia.org/
 
-	# Redirecting from subdirectories of wikipedia.org to subdomains
-	RewriteEngine On
-	RewriteRule ^/([a-z]{2}|meta)/(.*)$ http://$1.wikipedia.org/wiki/$2 [R=301,L,NE]
+    # Redirecting from subdirectories of wikipedia.org to subdomains
+    RewriteEngine On
+    RewriteRule . - [E=HTTP_X_Forwarded_Proto:%{HTTP:X-Forwarded-Proto}]
+    RewriteCond %{ENV:HTTP_X_Forwarded_Proto} !=https
+    RewriteRule . - [E=HTTP_X_Forwarded_Proto:http]
+
+    RewriteRule ^/([a-z]{2}|meta)/(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://$1.wikipedia.org/wiki/$2 [R=301,L,NE]
+    RewriteRule ^(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://www.wikipedia.org$1 [R=301,L]
 </VirtualHost>
 
 <VirtualHost *>
@@ -12,6 +16,9 @@
     ServerName www.wikipedia.org
 
     RewriteEngine On
+    RewriteRule . - [E=HTTP_X_Forwarded_Proto:%{HTTP:X-Forwarded-Proto}]
+    RewriteCond %{ENV:HTTP_X_Forwarded_Proto} !=https
+    RewriteRule . - [E=HTTP_X_Forwarded_Proto:http]
 
     # Front page...
     RewriteRule ^/$ /w/extract2.php?title=Www.wikipedia.org_portal&template=Www.wikipedia.org_template [L]
@@ -20,23 +27,23 @@
     RewriteRule ^/search-redirect.php /w/search-redirect.php [L]
 
     # Language-specific links
-    RewriteRule ^/wiki/(aa|ab|af|am|as|ay|az|ba|be|bh|bi|bn|bo|ca|co|dz|et|eu|fa|fi|fj|fo|fy|ga|gl|gn|gu|ha|hy|ia|id|ik|is|it|iu|jv|ka|kk|kl|km|kn|ks|ku|ky|la|lo|lv|mg|mi|mk|mn|mo|mr|my|na|ne|no|oc|om|or|pa|ps|pt|qu|rm|rn|rw|sa|sd|sg|si|sk|sm|sn|so|sq|ss|st|su|sw|ta|te|tg|th|ti|tk|tl|tn|to|ts|tt|tw|ug|uk|ur|uz|vi|vo|wo|xh|yi|yo|za|zu):(.*)$ http://$1.wikipedia.org/wiki/$2 [R,L]
-    RewriteRule ^/wiki/(ar|bs|cs|cy|da|de|dk|el|en|eo|es|fr|gd|gv|he|hi|hr|hu|ja|ko|ml|ms|nl|pl|ro|ru|sh|sl|sr|sv|tr|zh|zh-cn|zh-tw|nds):(.*)$ http://$1.wikipedia.org/wiki/$2 [R,L]
+    RewriteRule ^/wiki/(aa|ab|af|am|as|ay|az|ba|be|bh|bi|bn|bo|ca|co|dz|et|eu|fa|fi|fj|fo|fy|ga|gl|gn|gu|ha|hy|ia|id|ik|is|it|iu|jv|ka|kk|kl|km|kn|ks|ku|ky|la|lo|lv|mg|mi|mk|mn|mo|mr|my|na|ne|no|oc|om|or|pa|ps|pt|qu|rm|rn|rw|sa|sd|sg|si|sk|sm|sn|so|sq|ss|st|su|sw|ta|te|tg|th|ti|tk|tl|tn|to|ts|tt|tw|ug|uk|ur|uz|vi|vo|wo|xh|yi|yo|za|zu):(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://$1.wikipedia.org/wiki/$2 [R,L]
+    RewriteRule ^/wiki/(ar|bs|cs|cy|da|de|dk|el|en|eo|es|fr|gd|gv|he|hi|hr|hu|ja|ko|ml|ms|nl|pl|ro|ru|sh|sl|sr|sv|tr|zh|zh-cn|zh-tw|nds):(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://$1.wikipedia.org/wiki/$2 [R,L]
 
     # English Wikipedia pages
-    RewriteRule ^/(upload|wiki|stats|w)/(.*)$ http://en.wikipedia.org/$1/$2 [R=301,L]
-    RewriteRule ^/wiki$ http://en.wikipedia.org/ [R=301,L]
+    RewriteRule ^/(upload|wiki|stats|w)/(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://en.wikipedia.org/$1/$2 [R=301,L]
+    RewriteRule ^/wiki$ %{ENV:HTTP_X_Forwarded_Proto}://en.wikipedia.org/ [R=301,L]
 
     # Mailing lists...
-    RewriteRule ^/(mailman|pipermail)(.*)$ http://mail.wikipedia.org/$1$2 [R=301,L]
+    RewriteRule ^/(mailman|pipermail)(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://lists.wikimedia.org/$1$2 [R=301,L]
 
     # Old-style english wikipedia
     RewriteCond %{QUERY_STRING} ([^&;]+)
-    RewriteRule ^/wiki\.cgi$ http://en.wikipedia.org/wiki/%1 [R=302,L]
-    RewriteRule ^/wiki\.cgi$ http://en.wikipedia.org/ [R=302,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://en.wikipedia.org/wiki/%1 [R=302,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://en.wikipedia.org/ [R=302,L]
 
     # Everything else
-    RewriteRule ^(.*)$ http://en.wikipedia.org$1 [R=301,L]
+    RewriteRule ^(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://en.wikipedia.org$1 [R=301,L]
 
     php_admin_flag engine on
 </VirtualHost>
@@ -55,17 +62,15 @@
 </VirtualHost>
 
 <VirtualHost *>
-    ServerName wiktionary.org
-    Redirect permanent / http://www.wiktionary.org/
-</VirtualHost>
-
-<VirtualHost *>
     ServerName www.wiktionary.org
 
     DocumentRoot /usr/local/apache/common/docroot/wwwportal
     php_admin_flag engine on
 
     RewriteEngine On
+    RewriteRule . - [E=HTTP_X_Forwarded_Proto:%{HTTP:X-Forwarded-Proto}]
+    RewriteCond %{ENV:HTTP_X_Forwarded_Proto} !=https
+    RewriteRule . - [E=HTTP_X_Forwarded_Proto:http]
 
     # Front page...
     RewriteRule ^/$ /w/extract2.php?title=Www.wiktionary.org_portal&template=Www.wiktionary.org_template [L]
@@ -74,12 +79,7 @@
     RewriteRule ^/search-redirect.php /w/search-redirect.php [L]
 
     # Everything else
-    RewriteRule ^(.*)$ http://en.wiktionary.org$1 [R=301,L]
-</VirtualHost>
-
-<VirtualHost *>
-    ServerName wikinews.org
-    Redirect permanent / http://www.wikinews.org/
+    RewriteRule ^(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://en.wiktionary.org$1 [R=301,L]
 </VirtualHost>
 
 <VirtualHost *>
@@ -89,6 +89,9 @@
     php_admin_flag engine on
 
     RewriteEngine On
+    RewriteRule . - [E=HTTP_X_Forwarded_Proto:%{HTTP:X-Forwarded-Proto}]
+    RewriteCond %{ENV:HTTP_X_Forwarded_Proto} !=https
+    RewriteRule . - [E=HTTP_X_Forwarded_Proto:http]
 
     # Front page...
     RewriteRule ^/$ /w/extract2.php?title=Www.wikinews.org_portal&template=Www.wikinews.org_template [L]
@@ -97,12 +100,7 @@
     RewriteRule ^/search-redirect.php /w/search-redirect.php [L]
 
     # Everything else
-    RewriteRule ^(.*)$ http://en.wikinews.org$1 [R=301,L]
-</VirtualHost>
-
-<VirtualHost *>
-    ServerName wikiquote.org
-    Redirect permanent / http://www.wikiquote.org/
+    RewriteRule ^(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://en.wikinews.org$1 [R=301,L]
 </VirtualHost>
 
 <VirtualHost *>
@@ -112,6 +110,9 @@
     php_admin_flag engine on
 
     RewriteEngine On
+    RewriteRule . - [E=HTTP_X_Forwarded_Proto:%{HTTP:X-Forwarded-Proto}]
+    RewriteCond %{ENV:HTTP_X_Forwarded_Proto} !=https
+    RewriteRule . - [E=HTTP_X_Forwarded_Proto:http]
 
     # Front page...
     RewriteRule ^/$ /w/extract2.php?title=Www.wikiquote.org_portal&template=Www.wikiquote.org_template [L]
@@ -120,7 +121,7 @@
     RewriteRule ^/search-redirect.php /w/search-redirect.php [L]
 
     # Everything else
-    RewriteRule ^(.*)$ http://en.wikiquote.org$1 [R=301,L]
+    RewriteRule ^(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://en.wikiquote.org$1 [R=301,L]
 </VirtualHost>
 
 <VirtualHost *>
@@ -131,6 +132,9 @@
     php_admin_flag engine on
 
     RewriteEngine On
+    RewriteRule . - [E=HTTP_X_Forwarded_Proto:%{HTTP:X-Forwarded-Proto}]
+    RewriteCond %{ENV:HTTP_X_Forwarded_Proto} !=https
+    RewriteRule . - [E=HTTP_X_Forwarded_Proto:http]
 
     # Front page...
     RewriteRule ^/$ /w/extract2.php?title=Www.wikiversity.org_portal&template=Www.wikiversity.org_template [L]
@@ -139,12 +143,7 @@
     RewriteRule ^/search-redirect.php /w/search-redirect.php [L]
 
     # Everything else
-    RewriteRule ^(.*)$ http://en.wikiversity.org$1 [R=301,L]
-</VirtualHost>
-
-<VirtualHost *>
-    ServerName wikibooks.org
-    Redirect permanent / http://www.wikibooks.org/
+    RewriteRule ^(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://en.wikiversity.org$1 [R=301,L]
 </VirtualHost>
 
 <VirtualHost *>
@@ -154,6 +153,9 @@
     php_admin_flag engine on
 
     RewriteEngine On
+    RewriteRule . - [E=HTTP_X_Forwarded_Proto:%{HTTP:X-Forwarded-Proto}]
+    RewriteCond %{ENV:HTTP_X_Forwarded_Proto} !=https
+    RewriteRule . - [E=HTTP_X_Forwarded_Proto:http]
 
     # Front page...
     RewriteRule ^/$ /w/extract2.php?title=Www.wikibooks.org_portal&template=Www.wikibooks.org_template [L]
@@ -162,12 +164,7 @@
     RewriteRule ^/search-redirect.php /w/search-redirect.php [L]
 
     # Everything else
-    RewriteRule ^(.*)$ http://en.wikibooks.org$1 [R=301,L]
-</VirtualHost>
-
-<VirtualHost *>
-    ServerName wikivoyage.org
-    Redirect permanent / http://www.wikivoyage.org/
+    RewriteRule ^(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://en.wikibooks.org$1 [R=301,L]
 </VirtualHost>
 
 <VirtualHost *>
@@ -177,6 +174,9 @@
     php_admin_flag engine on
 
     RewriteEngine On
+    RewriteRule . - [E=HTTP_X_Forwarded_Proto:%{HTTP:X-Forwarded-Proto}]
+    RewriteCond %{ENV:HTTP_X_Forwarded_Proto} !=https
+    RewriteRule . - [E=HTTP_X_Forwarded_Proto:http]
 
     # Front page...
     RewriteRule ^/$ /w/extract2.php?title=Www.wikivoyage.org_portal&template=Www.wikivoyage.org_template [L]
@@ -185,12 +185,12 @@
     RewriteRule ^/search-redirect.php /w/search-redirect.php [L]
 
     # Old /de
-    RewriteRule ^/de/(.*)$ http://de.wikivoyage.org/wiki/$1 [R=301,L]
+    RewriteRule ^/de/(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://de.wikivoyage.org/wiki/$1 [R=301,L]
     # Old /it
-    RewriteRule ^/it/(.*)$ http://it.wikivoyage.org/wiki/$1 [R=301,L]
+    RewriteRule ^/it/(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://it.wikivoyage.org/wiki/$1 [R=301,L]
 
     # Everything else
-    RewriteRule ^(.*)$ http://en.wikivoyage.org$1 [R=301,L]
+    RewriteRule ^(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://en.wikivoyage.org$1 [R=301,L]
 </VirtualHost>
 
 # vim: sts=4 sw=4 syn=apache autoindent
